--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -13,11 +13,13 @@ body {
     height: 100vh;
 }
 
-.login-container {
+.login-form {
     width: 100%;
     max-width: 400px;
     padding: 20px;
     margin: auto;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 .login-card {
