--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -242,7 +242,7 @@
 }
 
 @media (max-width: 576px) {
-    #mapButton, #downloadPdfButton {
+    #downloadPdfButton {
         bottom: 100px;
         left: 10px;
         right: 10px;
@@ -278,3 +278,4 @@
 .course-block {
     pointer-events: auto;
 }
+
