--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -242,11 +242,7 @@
 }
 
 @media (max-width: 576px) {
-    #downloadPdfButton {
-        bottom: 100px;
-        left: 10px;
-        right: 10px;
-    }
+    
 
     .course-search input {
         max-width: 100%;
@@ -277,5 +273,46 @@
 
 .course-block {
     pointer-events: auto;
+}
+
+#downloadPdfButton {
+    /*top right corner*/
+    position: absolute;
+    top: 100px;
+    right: 10px;
+    padding: 8px 18px;
+
+
+
+}
+
+/* Hover Effect */
+#downloadPdfButton:hover {
+    background-color: #198754; /* Darker green for better contrast */
+    color: #fff; /* White text on hover */
+}
+
+@media (max-width: 730px) {
+    #downloadPdfButton {
+       
+
+        position: relative;
+
+        width: 100%;
+        font-size: 0.9rem;
+        padding: 10px 14px;
+        top: 0;
+    }
+}
+
+
+#downloadPdfButton {
+    transition: all 0.3s ease-in-out;
+}
+
+/* Hover Effect */
+#downloadPdfButton:hover {
+    background-color: #198754; /* Darker green for better contrast */
+    color: #fff; /* White text on hover */
 }
 
